objects/Competitor_View_Count__c.object
<CustomObject>
    <fields>
        <fullName>Competitor__c</fullName>
        <label>Competitor</label>
        <referenceTo>Competitor__c</referenceTo>
        <relationshipLabel>Competitor View Count</relationshipLabel>
        <relationshipName>Competitor_View_Count</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Competitor View Count</relationshipLabel>
        <relationshipName>Competitor_View_Count</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Competitor View Count</relationshipLabel>
        <relationshipName>Competitor_View_Count</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Family_of_Interest__c</fullName>
        <label>Product Family of Interest</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>View_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <label>View Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>